style the header

--- a/style.css
+++ b/style.css
@@ -1,20 +1,62 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Fira Sans', sans-serif;
+}
+
 html, body {
-    height: 100%;
-  }
-  
-  body {
-    display: flex;
-    align-items: stretch;
-    margin: 0;
-  }
-  
-  button {
-    position: fixed;
-    top: 1rem;
-    left: calc(50% - 3rem);
-    width: 6rem;
-  }
-  
-  div {
-    width: 20%;
-  }
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column; 
+  margin: 0;
+  min-height: 100vh; 
+}
+
+header {
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: row;
+}
+
+h1 {
+  margin-top: 10px;
+}
+
+button {
+  vertical-align: middle;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  border: 1px solid #2980b9;
+  border-radius: 4px;
+  padding: 5px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #3498db;
+  color: white;
+}
+
+p {
+  margin-top: 10px;
+  margin-left: 150px;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  align-items: stretch;
+  flex: 1;
+}
+
+.container > div {
+  flex: 1;
+}
+
+
+
+
+
+
+
