--- a/style.css
+++ b/style.css
@@ -73,8 +73,11 @@ p {
   }
 
   .container {
-    flex-direction: row; /* Stack container divs horizontally on mobile */
+    display: flex; /* Display the container divs horizontally on mobile */
+    flex-direction: row; /* Align container divs in a row on mobile */
+    flex-wrap: nowrap; /* Prevent container divs from wrapping on mobile */
   }
+
 
   .container > div {
     flex: 1;
