--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ p {
 
   .container {
     display: flex; /* Display the container divs horizontally on mobile */
+    flex-direction: row;
     flex-wrap: wrap; /* Allow items to wrap to the next line */
     justify-content: space-between; /
   }
