--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p {
   .container {
     display: flex; /* Display the container divs horizontally on mobile */
     flex-wrap: wrap; /* Allow items to wrap to the next line */
-    justify-content: space-between; /
+    justify-content: space-between;
   }
 
   .container > div {
