--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ body {
   display: flex;
   flex-direction: column; 
   margin: 0;
-  min-height: 100vh; 
+  min-height: 100vh;  
 }
+
 
 header {
   padding: 20px 40px;
@@ -23,9 +24,11 @@ header {
 
 h1 {
   margin-top: 10px;
+  font-size: 2.5rem;
+  font-weight: 600;
 }
 
-button {
+#regenerateButton {
   vertical-align: middle;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -36,6 +39,9 @@ button {
   cursor: pointer;
   background-color: #3498db;
   color: white;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: 0.4s ease-out;
 }
 
 p {
@@ -52,6 +58,39 @@ p {
 
 .container > div {
   flex: 1;
+}
+
+.colour {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: 16px;
+}
+
+button, input {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+.colour-input {
+  text-align: center;
+}
+
+.lock-toggle {
+  opacity: 0.5;
+  transition: 0.4s;
+}
+
+.lock-toggle.is-locked {
+  opacity: 1;
+}
+
+button, .lock-toggle {
+  cursor: pointer;
 }
 
 /* Mobile Portrait Styles */
@@ -73,13 +112,21 @@ p {
   }
 
   .container {
-    display: flex; /* Display the container divs horizontally on mobile */
-    flex-wrap: wrap; /* Allow items to wrap to the next line */
-    justify-content: space-between;
+    display:flex;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(1, 1fr);
+    margin: 0 auto;
   }
 
   .container > div {
-    flex: 1;
+    width: 80%;
+    margin: 5px auto; 
+  }
+
+  .colour {
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
   }
 
 }
