--- a/style.css
+++ b/style.css
@@ -99,6 +99,11 @@ button, input {
 
 .colour-input {
   text-align: center;
+  font-size: 1.6em;
+  font-family: 'Fira Sans';
+  font-style: normal;
+  font-weight: 400;
+  text-transform: uppercase;
 }
 
 .lock-icon {
@@ -150,13 +155,6 @@ button, input {
     width: 80%;
     margin: 5px auto; 
   }
-
-  /*.colour {
-    flex-direction:column;
-    align-items: center;
-    justify-content: center;
-  }*/
-
 }
 
 
