--- a/style.css
+++ b/style.css
@@ -145,6 +145,16 @@ button, input {
   }
 
   .container {
+    align-self: flex-start;
+    width: 100px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-right: 10px;
+    flex: 1;
+  }
+
+  /*.container {
     display:flex;
     flex-wrap: wrap;
     grid-template-columns: repeat(1, 1fr);
@@ -154,7 +164,7 @@ button, input {
   .container > div {
     width: 80%;
     margin: 5px auto; 
-  }
+  }*/
 }
 
 
