--- a/style.css
+++ b/style.css
@@ -128,9 +128,9 @@ button, input {
 
 /* Mobile Portrait Styles */
 @media only screen and (max-width: 480px) {
-  header {
+  /*header {
     padding: 10px;
-    flex-direction: column; /* Stack header content vertically on mobile */
+    flex-direction: column; /* Stack header content vertically on mobile
     align-items: center; 
     text-align: center; 
   }
@@ -138,10 +138,15 @@ button, input {
   button {
     margin-top: 10px; 
     margin-left: 0;
-  }
+  }*/
 
-  p {
+  /*p {
     margin: 10px; 
+  }*/
+
+  .colour {
+    display: flex;
+    flex-direction: column;
   }
 
   .container {
