--- a/style.css
+++ b/style.css
@@ -147,16 +147,22 @@ button, input {
   .colour {
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
 
   .container {
     align-self: flex-start;
     width: 100px;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: stretch; 
+    justify-content: flex-start;
     padding-right: 10px;
     flex: 1;
+  }
+
+  .container > div {
+    width: 100%; 
+    margin: 0; 
   }
 
   /*.container {
