--- a/style.css
+++ b/style.css
@@ -128,21 +128,24 @@ button, input {
 
 /* Mobile Portrait Styles */
 @media only screen and (max-width: 480px) {
-  /*header {
-    padding: 10px;
-    flex-direction: column; /* Stack header content vertically on mobile
+  header {
+    padding: 10px; 
+    flex-direction: column; 
     align-items: center; 
     text-align: center; 
   }
 
+  h1 {
+    font-size: 2rem;
+  }
+
   button {
     margin-top: 10px; 
-    margin-left: 0;
-  }*/
+  }
 
-  /*p {
+  p {
     margin: 10px; 
-  }*/
+  }
 
   .colour {
     display: flex;
@@ -164,18 +167,6 @@ button, input {
     width: 100%; 
     margin: 0; 
   }
-
-  /*.container {
-    display:flex;
-    flex-wrap: wrap;
-    grid-template-columns: repeat(1, 1fr);
-    margin: 0 auto;
-  }
-
-  .container > div {
-    width: 80%;
-    margin: 5px auto; 
-  }*/
 }
 
 
