--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ button, input {
 
   .container {
     align-self: flex-start;
-    width: 100px;
+    /*width: 100px;*/
     flex-direction: column;
     align-items: stretch; 
     justify-content: flex-start;
