--- a/style.css
+++ b/style.css
@@ -157,8 +157,9 @@ button, input {
     width:fit-content;
     flex-direction: column;
     align-items: stretch; 
-    justify-content: flex-start;
+    justify-content: space-evenly;
     flex: 1;
+    width: 100px;
   }
 
   .container > div {
